--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-syntax-highlighter": "^11.0.2",
+    "redux": "^4.0.4",
     "scoped-css-loader": "^0.4.0"
   }
 }
